# primal

./: .gitignore  .travis.yml  Cargo.toml  README.md  bors.toml  deploy-docs.sh  index.html  run-in  search-index.js
.github/workflows/: ci.yml  pr.yml
benches/: bench.rs
ci/: codecov.yml  script.sh
examples/: binary-search-is-prime.rs  binary-search-iterator.rs  binary-search-sieve.rs  count-iterator.rs  count-sieve.rs  count-slowsieve.rs  count-streaming.rs  nth-prime-iterator.rs  nth-prime-sieve.rs  nth-prime-streaming.rs  prime-sum-sieve-overestimate.rs  prime-sum-sieve.rs  prime-sum-streaming.rs  small_prime_props.rs
generators/: Cargo.toml
hamming/: fn.distance.html  fn.distance_fast.html  fn.weight.html  index.html
hamming/distance_/: sidebar-items.js
hamming/weight_/: sidebar-items.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Binary.js  trait.Debug.js  trait.Display.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/: trait.DoubleEndedIterator.js  trait.ExactSizeIterator.js  trait.IntoIterator.js  trait.Iterator.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Add.js  trait.BitAnd.js  trait.BitOr.js  trait.BitXor.js  trait.Div.js  trait.Index.js  trait.Mul.js  trait.Neg.js  trait.Rem.js  trait.Shl.js  trait.Shr.js  trait.Sub.js
implementors/core/str/: trait.FromStr.js
implementors/num/integer/: trait.Integer.js
implementors/num/traits/: trait.CheckedAdd.js  trait.CheckedDiv.js  trait.Num.js  (+6 more)
num/: fn.abs.html  fn.abs_sub.html  fn.checked_pow.html  fn.one.html  fn.pow.html  fn.signum.html  fn.zero.html  index.html  struct.BigInt.html  struct.BigUint.html  struct.Complex.html  trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.One.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html  type.BigRational.html  type.Rational.html
num/bigint/: constant.ZERO_BIG_DIGIT.html  enum.ParseBigIntError.html  enum.Sign.html  index.html  struct.BigInt.html  struct.BigUint.html  trait.RandBigInt.html  trait.ToBigInt.html  trait.ToBigUint.html  type.BigDigit.html  type.DoubleBigDigit.html
num/cast/: trait.FromPrimitive.html  trait.ToPrimitive.html
num/complex/: index.html  struct.Complex.html  type.Complex32.html  type.Complex64.html
num/integer/: trait.Integer.html
num/rational/: index.html  struct.ParseRatioError.html  struct.Ratio.html  type.BigRational.html  type.Rational.html  type.Rational32.html  type.Rational64.html
num/traits/: trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.FromPrimitive.html  trait.Num.html  trait.One.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html
num_bigint/: constant.ZERO_BIG_DIGIT.html  enum.ParseBigIntError.html  enum.Sign.html  index.html  struct.BigInt.html  struct.BigUint.html  trait.RandBigInt.html  trait.ToBigInt.html  trait.ToBigUint.html  type.BigDigit.html  type.DoubleBigDigit.html
num_bigint/big_digit/: constant.BASE.html  constant.BITS.html  fn.from_doublebigdigit.html  fn.to_doublebigdigit.html  index.html
num_complex/: index.html  struct.Complex.html  type.Complex32.html  type.Complex64.html
num_iter/: struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepInclusive.html
num_rational/: index.html  struct.ParseRatioError.html  struct.Ratio.html  type.BigRational.html  type.Rational.html  type.Rational32.html  type.Rational64.html
primal/: fn.as_perfect_power.html  fn.as_prime_power.html  fn.estimate_nth_prime.html  fn.estimate_prime_pi.html  fn.is_prime.html  index.html  sidebar-items.js  struct.Primes.html  struct.Sieve.html  struct.SievePrimes.html  struct.StreamingSieve.html
primal-bit/: Cargo.toml
primal-bit/src/: inner.rs  iter.rs  lib.rs  util.rs
primal-bit/tests/: from_rust.rs
primal-check/: Cargo.toml
primal-check/src/: is_prime.rs  lib.rs  perfect_power.rs
primal-count/: Cargo.toml
primal-count/benches/: bench.rs
primal-count/src/: lib.rs  prime_count.rs  raw_script.rs  util.rs
primal-estimate/: Cargo.toml
primal-estimate/src/: lib.rs  tables.rs
primal-sieve/: Cargo.toml
primal-sieve/benches/: bench.rs
primal-sieve/src/: lib.rs  sieve.rs  streaming.rs  wheel210.rs  wheel30.rs
primal-sieve/src/streaming/: mod.rs  presieve.rs  primes.rs
primal-sieve/src/wheel/: mod.rs  wheel210.rs  wheel30.rs
primal-slowsieve/: Cargo.toml
primal-slowsieve/benches/: bench.rs
primal-slowsieve/src/: lib.rs
primal-smallsieve/: Cargo.toml
primal-smallsieve/src/: lib.rs
primal_bit/: index.html  sidebar-items.js  struct.BitVec.html  struct.Iter.html
primal_check/: fn.as_perfect_power.html  fn.as_prime_power.html  fn.miller_rabin.html  index.html  sidebar-items.js
primal_check/is_prime/: fn.miller_rabin.html  sidebar-items.js
primal_check/perfect_power/: fn.as_perfect_power.html  fn.as_prime_power.html  sidebar-items.js
primal_estimate/: fn.nth_prime.html  fn.prime_pi.html  index.html  sidebar-items.js
primal_sieve/: index.html  sidebar-items.js  struct.Primes.html  struct.Sieve.html  struct.SievePrimes.html  struct.StreamingSieve.html
primal_sieve/sieve/: sidebar-items.js  struct.Sieve.html  struct.SievePrimes.html
primal_sieve/streaming/: sidebar-items.js  struct.StreamingSieve.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
src/: bit.rs  estimate.rs  fast_sieve.rs  is_prime.rs  lib.rs  perfect_power.rs  sieve.rs  tables.rs
src/hamming/: distance_.rs.html  lib.rs.html  weight_.rs.html
src/num_bigint/: lib.rs.html
src/num_complex/: lib.rs.html
src/num_rational/: lib.rs.html
wheel-generator/: Cargo.toml
wheel-generator/src/: main.rs
(+36 files in other folders)
