[package]
name = "generators"
version = "0.4.0"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
primal-slowsieve = { path = "../primal-slowsieve", version = "0.4" }
primal-check = { path = "../primal-check", version = "0.4" }

[package.metadata.release]
release = false
