[package]
name = "primal-bit"
version = "0.2.4"
authors = ["Huon Wilson <dbau.pp@gmail.com>",
           "The Rust Project Developers"]

homepage = "https://github.com/huonw/primal"
repository = "https://github.com/huonw/primal"
documentation = "http://huonw.github.io/primal/primal_bit/"
license = "MIT/Apache-2.0"
keywords = ["math", "mathematics", "primes", "number-theory"]

description = """
Bit-vector specialised to the prime-number-related needs of `primal`.
"""

[dependencies]
hamming = "0.1"

[features]
unstable = []
