[package]
name = "primal-bit"
version = "0.3.1"
authors = ["Huon Wilson <dbau.pp@gmail.com>",
           "The Rust Project Developers"]
edition = "2018"

homepage = "https://github.com/huonw/primal"
repository = "https://github.com/huonw/primal"
documentation = "http://docs.rs/primal-bit/"
license = "MIT OR Apache-2.0"
keywords = ["math", "mathematics", "primes", "number-theory"]

description = """
Bit-vector specialised to the prime-number-related needs of `primal`.
"""

[dependencies]
hamming = "0.1"

[features]
unstable = []
