[package]
name = "primal-bit"
version = "0.3.1"
authors = ["Huon Wilson <dbau.pp@gmail.com>",
           "The Rust Project Developers"]
edition = "2018"

homepage = "https://github.com/huonw/primal"
repository = "https://github.com/huonw/primal"
documentation = "https://docs.rs/primal-bit/"
license = "MIT OR Apache-2.0"
keywords = ["math", "mathematics", "primes", "number-theory"]

description = """
Bit-vector specialised to the prime-number-related needs of `primal`.
"""

[dependencies]
# last update to crates.io was 8 years ago and the crate did not support no-std then
hamming = { git = "https://github.com/huonw/hamming.git", rev = "4b528d75cfa2e102b6edc6c60b629cd986215437" }

[features]
no-std = []
unstable = []
