[package]
name = "primal-check"
version = "0.1.0"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

homepage = "https://github.com/huonw/primal"
repository = "https://github.com/huonw/primal"
documentation = "http://huonw.github.io/primal/primal_estimate/"
license = "MIT/Apache-2.0"
keywords = ["math", "mathematics", "primes", "number-theory"]

description = """
Fast standalone primality testing.
"""

[dependencies]
num = "0"

[dev-dependencies]
primal = { path = ".." }

[features]
unstable = []
