[package]
name = "primal-check"
version = "0.2.3"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

homepage = "https://github.com/huonw/primal"
repository = "https://github.com/huonw/primal"
documentation = "http://huonw.github.io/primal/primal_check/"
license = "MIT/Apache-2.0"
keywords = ["math", "mathematics", "primes", "number-theory"]

description = """
Fast standalone primality testing.
"""

[dependencies]
num-integer = "0.1"

[dev-dependencies]
primal = { path = "..", version = "0.2" }

[features]
unstable = []
