[package]
name = "primal-check"
version = "0.4.0"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]
edition = "2018"

homepage = "https://github.com/huonw/primal"
repository = "https://github.com/huonw/primal"
documentation = "https://docs.rs/primal-check/"
license = "MIT OR Apache-2.0"
keywords = ["math", "mathematics", "primes", "number-theory"]

description = """
Fast standalone primality testing.
"""

[dependencies]
libm = { version = "0.2.8", optional = true }
num-integer = { version = "0.1", default_features = false }

[dev-dependencies]
primal = { path = "..", version = "0.4" }

[features]
no-std = ["dep:libm"]
unstable = []
