[package]
name = "primal-count"
version = "0.1.0"
authors = ["Kaimyn Chapman <kchap21@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primal-sieve = { path = "../primal-sieve", version = "0.2.9" }

[dev-dependencies]
primal = { path = "..", version = "0.2" }
bencher = "0.1.5"

[[bench]]
name = "bench"
harness = false
