[package]
name = "primal-estimate"
version = "0.2.1"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

homepage = "https://github.com/huonw/primal"
repository = "https://github.com/huonw/primal"
documentation = "http://huonw.github.io/primal/primal_estimate/"
license = "MIT/Apache-2.0"
keywords = ["math", "mathematics", "primes", "number-theory"]
description = """
State-of-the-art estimation of upper and lower bounds for π(n)
(the number of primes below n) and p_k (the k-th prime).
"""

[dev-dependencies]
primal = { path = "..", version = "*" }

[features]
unstable = []
