[package]
name = "primal-estimate"
version = "0.3.2"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]
edition = "2018"

homepage = "https://github.com/huonw/primal"
repository = "https://github.com/huonw/primal"
documentation = "http://docs.rs/primal-estimate/"
license = "MIT OR Apache-2.0"
keywords = ["math", "mathematics", "primes", "number-theory"]
description = """
State-of-the-art estimation of upper and lower bounds for π(n)
(the number of primes below n) and p_k (the k-th prime).
"""

[dev-dependencies]
primal = { path = "..", version = "0.3" }

[features]
unstable = []
