[package]
name = "primal-sieve"
version = "0.3.0"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]
edition = "2018"

homepage = "https://github.com/huonw/primal"
repository = "https://github.com/huonw/primal"
documentation = "http://docs.rs/primal-sieve/"
license = "MIT/Apache-2.0"
keywords = ["math", "mathematics", "primes", "number-theory"]

description = """
A high performance prime sieve.
"""

[dependencies]
primal-bit = { path = "../primal-bit", version = "0.3" }
primal-estimate = { path = "../primal-estimate", version = "0.3" }
smallvec = "1"

[dev-dependencies]
primal-slowsieve = { path = "../primal-slowsieve", version = "0.3" }
primal = { path = "..", version = "0.3" }
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[features]
unstable = []
safe = []
slow_tests = []
