[package]
name = "primal-sieve"
version = "0.3.7"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]
edition = "2018"

homepage = "https://github.com/huonw/primal"
repository = "https://github.com/huonw/primal"
documentation = "https://docs.rs/primal-sieve/"
license = "MIT OR Apache-2.0"
keywords = ["math", "mathematics", "primes", "number-theory"]

description = """
A high performance prime sieve.
"""

[dependencies]
libm = { version = "0.2.8", optional = true }
primal-bit = { path = "../primal-bit", version = "0.3" }
primal-estimate = { path = "../primal-estimate", version = "0.3" }
smallvec = "1"

[dev-dependencies]
primal-slowsieve = { path = "../primal-slowsieve", version = "0.3" }
primal = { path = "..", version = "0.3" }
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[features]
no-std = ["libm", "primal-bit/no-std", "primal-estimate/no-std"]
unstable = []
safe = []
slow_tests = []
