[package]
name = "primal-slowsieve"
version = "0.4.0"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]
edition = "2021"

homepage = "https://github.com/huonw/primal"
repository = "https://github.com/huonw/primal"
documentation = "https://docs.rs/primal-slowsieve/"
license = "MIT OR Apache-2.0"
keywords = ["math", "mathematics", "primes", "number-theory"]

description = """
A simple sieve of Eratosthenes designed for testing faster sieves. You
probably want `primal-sieve`, or even just `primal` itself.
"""

[dependencies]
libm = { version = "0.2.8", optional = true }
primal-bit = { path = "../primal-bit", version = "0.4" }
primal-estimate = { path = "../primal-estimate", version = "0.4" }

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[features]
libm = ["dep:libm", "primal-estimate/libm"]
std = ["primal-estimate/std"]
default = ["std"]
unstable = []
slow_tests = []
